add about me page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,7 @@
 <section id="contact">
 	<div class="inner">
 		<section>
+			<h2>Contact</h2>
 			<a href="mailto:{{ site.email }}" class="icon alt fa-envelope"><span class="label">Email</span></a>
 			<a href="{{ site.github_url }}" class="icon alt fa-github" target="_blank"><span class="label">github</span></a>
 			<a href="{{ site.codepen_url }}" class="icon alt fa-codepen" target="_blank"><span class="label">codepen</span></a>							
