--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,5 +18,6 @@
 	    	{% endif %}
 		{% endfor %}
 		<li><a href="{{ "" | absolute_url }}/projects">All Projects</a></li>
+		<li><a href="{{ "" | absolute_url }}/about">About</a></li>
 	</ul>
 </nav>
