--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,8 +14,7 @@
     
     
 <!-- Main -->
-<div id="main" class="alt">
-
+<div id="main" class="alt {% if page.url == "/about" %}about-page{% endif %}">
 <!-- One -->
 <section id="one">
 	<div class="inner">
