--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,14 +14,23 @@
     
     
 <!-- Main -->
-<div id="main" class="alt {% if page.url == "/about" %}about-page{% endif %}">
+<div id="main" class="alt">
 <!-- One -->
 <section id="one">
-	<div class="inner">
-		<header class="major">
-			<h1>{{ page.title }}</h1>
-		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+	<div class="inner {% if page.url == "/about" %}about-page{% endif %}">
+		{% if page.url == "/about" %}
+		<div class="about-page--wrapper">
+			<header class="major">
+				<h1>{{ page.title }}</h1>
+			</header>
+			{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		</div>
+		{% else %}
+			<header class="major">
+				<h1>{{ page.title }}</h1>
+			</header>
+			{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		{% endif %}
 		<p>{{ content }}</p>
 	</div>
 </section>
